<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:id="@+id/rel1">

        <TextView
            android:id="@+id/tradeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/item_details"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="7dp"
            android:layout_below="@+id/tradeTV"
            android:layout_margin="15dp"
            android:background="@drawable/wline" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_below="@+id/line"/>

        <TextView
            android:id="@+id/itemDetailsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/line"
            android:textAlignment="center"
            android:layout_toRightOf="@+id/imageView"
            android:text="Name"
            android:textColor="@color/grey"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/uploaderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemDetailsName"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_toRightOf="@+id/imageView"
            android:text="Name"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemStatusTextView"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_below="@+id/uploaderName"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/imageView"
            android:gravity="center_vertical"/>


        <Button
            android:id="@+id/chatWithUserBtn"
            android:layout_toRightOf="@+id/itemStatusTextView"
            android:layout_width="50dp"
            android:background="@drawable/wgreybtn"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/uploaderName"
            android:layout_height="50dp"
            android:textColor="@color/grey"
            android:text="@string/chat"
            android:onClick="initiateChatWithUser"
            android:layout_alignParentRight="true"/>


    </RelativeLayout>


        <EditText
            android:id="@+id/commentEditTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_review_for_this_item"/>
        <Button
            android:id="@+id/commentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addComment"
            android:text="@string/add_review"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/grey"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

    </android.support.v7.widget.RecyclerView>



</LinearLayout>